--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/viking.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/viking-logo-removebg-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viking Construction & Landscaping | Utah's Premier Builders | 20+ Years Experience</title>
     <meta name="description" content="Utah's premier construction and landscaping experts with 20+ years of experience. Licensed, insured, and committed to 100% customer satisfaction. Serving Utah County and all surrounding areas." />
@@ -12,13 +12,13 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Viking Construction & Landscaping | Utah's Premier Builders" />
     <meta property="og:description" content="20+ years of perfection in construction and landscaping. Rain or shine, Viking will get it done!" />
-    <meta property="og:image" content="/viking.jpg" />
+    <meta property="og:image" content="/viking-logo-removebg-preview.png" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="Viking Construction & Landscaping | Utah's Premier Builders" />
     <meta property="twitter:description" content="20+ years of perfection in construction and landscaping. Rain or shine, Viking will get it done!" />
-    <meta property="twitter:image" content="/viking.jpg" />
+    <meta property="twitter:image" content="/viking-logo-removebg-preview.png" />
     
     <!-- Preload critical fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
